compiler/src/core/clang/snapshots/nudox__core__clang__tests__simple03.snap
---
source: compiler/src/core/clang/tests.rs
expression: "&entries"
---
[
    RecordType(
        Symbol {
            name: "Point",
            path: Local(
                "Point",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            source: Some(
                SourceRange {
                    start: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 1,
                        column: 9,
                    },
                    end: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 3,
                        column: 2,
                    },
                },
            ),
            inner: Record {
                generics: None,
                fields: [
                    Known(
                        KnownField {
                            key: Ident(
                                "x",
                            ),
                            path: Some(
                                Local(
                                    "x",
                                ),
                            ),
                            aliases: None,
                            type: Some(
                                Primitive(
                                    Int(
                                        W32,
                                    ),
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: None,
                            source: Some(
                                SourceRange {
                                    start: SourcePosition {
                                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                                        line: 2,
                                        column: 3,
                                    },
                                    end: SourcePosition {
                                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                                        line: 2,
                                        column: 8,
                                    },
                                },
                            ),
                        },
                    ),
                    Known(
                        KnownField {
                            key: Ident(
                                "y",
                            ),
                            path: Some(
                                Local(
                                    "y",
                                ),
                            ),
                            aliases: None,
                            type: Some(
                                Primitive(
                                    Int(
                                        W32,
                                    ),
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: None,
                            source: Some(
                                SourceRange {
                                    start: SourcePosition {
                                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                                        line: 2,
                                        column: 3,
                                    },
                                    end: SourcePosition {
                                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                                        line: 2,
                                        column: 11,
                                    },
                                },
                            ),
                        },
                    ),
                ],
                call_signatures: None,
                constructors: None,
                methods: None,
                index_signatures: None,
                super_types: None,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    Function(
        Symbol {
            name: "new_point",
            path: Local(
                "new_point",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            source: Some(
                SourceRange {
                    start: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 5,
                        column: 1,
                    },
                    end: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 8,
                        column: 2,
                    },
                },
            ),
            inner: Function {
                input_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "x",
                                type: Some(
                                    Primitive(
                                        Int(
                                            W32,
                                        ),
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                        Literal(
                            LiteralParameter {
                                name: "y",
                                type: Some(
                                    Primitive(
                                        Int(
                                            W32,
                                        ),
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    TypeReference(
                                        TypeReference {
                                            identifier: "Point",
                                            display_name: Some(
                                                "Point",
                                            ),
                                            canonical: Some(
                                                "Point",
                                            ),
                                            resolved: Some(
                                                Local(
                                                    "Point",
                                                ),
                                            ),
                                            generic_args: None,
                                        },
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: Some(
                    [
                        TypeLink {
                            position: Output {
                                index: 0,
                                name: None,
                            },
                            target: Local(
                                "Point",
                            ),
                            source: None,
                        },
                    ],
                ),
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: true,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    TypeAlias(
        Symbol {
            name: "P",
            path: Local(
                "P",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            source: Some(
                SourceRange {
                    start: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 10,
                        column: 1,
                    },
                    end: SourcePosition {
                        file: "$CARGO_MANIFEST_DIR/src/core/clang/tests/simple03/simple03.c",
                        line: 10,
                        column: 16,
                    },
                },
            ),
            inner: TypeReference(
                TypeReference {
                    identifier: "Point",
                    display_name: Some(
                        "Point",
                    ),
                    canonical: Some(
                        "Point",
                    ),
                    resolved: Some(
                        Local(
                            "Point",
                        ),
                    ),
                    generic_args: None,
                },
            ),
        },
    ),
]
