compiler/src/core/clang/snapshots/nudox__core__clang__tests__simple04.snap
---
source: compiler/src/core/clang/tests.rs
expression: "&entries"
---
[
    RecordType(
        Symbol {
            name: "Point",
            path: Local(
                "Point",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "A documented point.",
            ),
            inner: Record {
                name: Some(
                    "Point",
                ),
                generics: None,
                fields: [
                    Known(
                        KnownField {
                            key: Ident(
                                "x",
                            ),
                            type: Some(
                                Primitive(
                                    Int(
                                        W32,
                                    ),
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: Some(
                                "horizontal coordinate",
                            ),
                        },
                    ),
                    Known(
                        KnownField {
                            key: Ident(
                                "y",
                            ),
                            type: Some(
                                Primitive(
                                    Int(
                                        W32,
                                    ),
                                ),
                            ),
                            default_value: None,
                            attributes: FieldAttributes {
                                decorators: [],
                                is_mutable: true,
                                is_optional: false,
                                is_static: false,
                            },
                            visibility: Some(
                                Public,
                            ),
                            documentation: Some(
                                "vertical coordinate",
                            ),
                        },
                    ),
                ],
                call_signatures: None,
                constructors: None,
                methods: None,
                index_signatures: None,
                super_types: None,
                members: None,
                implemented_protocols: None,
            },
        },
    ),
    TypeAlias(
        Symbol {
            name: "Scalar",
            path: Local(
                "Scalar",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "Numeric scalar alias.",
            ),
            inner: Primitive(
                Float(
                    W64,
                ),
            ),
        },
    ),
    UnionType(
        Symbol {
            name: "Number",
            path: Local(
                "Number",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            inner: [
                Primitive(
                    Int(
                        W32,
                    ),
                ),
                Primitive(
                    Float(
                        W64,
                    ),
                ),
            ],
        },
    ),
    Constant(
        Symbol {
            name: "answer",
            path: Local(
                "answer",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            inner: (),
        },
    ),
    Variable(
        Symbol {
            name: "mutable_counter",
            path: Local(
                "mutable_counter",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            inner: (),
        },
    ),
    Function(
        Symbol {
            name: "scale_point",
            path: Local(
                "scale_point",
            ),
            aliases: None,
            visibility: Public,
            documentation: Some(
                "Scale a point by a scalar.",
            ),
            inner: Function {
                input_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "point",
                                type: Some(
                                    RawPointer {
                                        is_mutable: false,
                                        type: TypeReference(
                                            TypeReference {
                                                identifier: "Point",
                                                generic_args: None,
                                            },
                                        ),
                                    },
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                        Literal(
                            LiteralParameter {
                                name: "factor",
                                type: Some(
                                    TypeReference(
                                        TypeReference {
                                            identifier: "Scalar",
                                            generic_args: None,
                                        },
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                output_parameters: Some(
                    [
                        Literal(
                            LiteralParameter {
                                name: "",
                                type: Some(
                                    TypeReference(
                                        TypeReference {
                                            identifier: "Point",
                                            generic_args: None,
                                        },
                                    ),
                                ),
                                attributes: None,
                                default_value: None,
                                description: None,
                            },
                        ),
                    ],
                ),
                type_links: None,
                attributes: None,
                generics: None,
                receiver: None,
                overloads: None,
                implemented: false,
                members: None,
                implemented_protocols: None,
                body: None,
            },
        },
    ),
    TypeAlias(
        Symbol {
            name: "BinaryOp",
            path: Local(
                "BinaryOp",
            ),
            aliases: None,
            visibility: Public,
            documentation: None,
            inner: RawPointer {
                is_mutable: true,
                type: FunctionPointer(
                    FunctionPointer {
                        inputs: Some(
                            [
                                Literal(
                                    LiteralParameter {
                                        name: "arg0",
                                        type: Some(
                                            Primitive(
                                                Int(
                                                    W32,
                                                ),
                                            ),
                                        ),
                                        attributes: None,
                                        default_value: None,
                                        description: None,
                                    },
                                ),
                                Literal(
                                    LiteralParameter {
                                        name: "arg1",
                                        type: Some(
                                            Primitive(
                                                Int(
                                                    W32,
                                                ),
                                            ),
                                        ),
                                        attributes: None,
                                        default_value: None,
                                        description: None,
                                    },
                                ),
                            ],
                        ),
                        outputs: Some(
                            [
                                Literal(
                                    LiteralParameter {
                                        name: "",
                                        type: Some(
                                            Primitive(
                                                Int(
                                                    W32,
                                                ),
                                            ),
                                        ),
                                        attributes: None,
                                        default_value: None,
                                        description: None,
                                    },
                                ),
                            ],
                        ),
                        attributes: None,
                    },
                ),
            },
        },
    ),
]
